--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 role ="heading">Accessible portfolio</h1>
+	<nav role ="navigation">
+		<li role="listitem">1</li>
+		<li role="listitem">2</li>
+		<li role="listitem">3</li>
+	</nav>
+	<ul>
+		<li role="listitem">1</li>
+		<li role="listitem">2</li>
+		<li role="listitem">3</li>
+		<img src ="gyt.jpeg" alt ="gyt.jpeg" role="img">
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
