--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<li role="listitem">1</li>
 		<li role="listitem">2</li>
 		<li role="listitem">3</li>
-		<img src ="gyt.jpeg" alt ="gyt.jpeg" role="img">
+		<img src ="gyt.jpeg" alt ="gytp.jpeg" role="img">
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
