--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         <li role="listitem">3</li>
     </ul>
     
-    <img src="gyt.jpeg" alt="Description of the image" role="img">
+    <<img src="profile.jpg" alt="Profile Picture" role="img">
     
     <script type="text/javascript" src="./script.js"></script>
 
