--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
     <h1 role ="heading">Accessible Portfolio</h1>
     
     <nav role="navigation">
-        <ul>
+        <ul role="list">
             <li role="listitem">1</li>
             <li role="listitem">2</li>
             <li role="listitem">3</li>
         </ul>
     </nav>
     
-    <ul>
+    <ul role="list">
         <li role="listitem">1</li>
         <li role="listitem">2</li>
         <li role="listitem">3</li>
